--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     justify-content: center;
     color: rgb(2, 16, 9);
     font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
+    /* font-style: italic; */
     font-size : 100px;
     border-width: 10%;
     border-style:groove;
@@ -23,10 +23,11 @@ section .heading h2{
     text-transform: uppercase;
 }
 .divider {
-    width: 100px;
+    width: 900px;
     height: 2px;
     background-color: #d82c2e;
-    margin: 0 auto 20px;   
+    margin: 0 auto 20px;  
+
 }
 .divider.white {
     background-color: white;
@@ -40,6 +41,8 @@ ul {
 }
 #experience .heading h2 {
     color: rgb(22, 13, 13);
+    font-size: 60px;
+    text-shadow: -1px 0 #cdd2d5, -1px 2px #808d93, -2px 1px #cdd2d5, -2px 3px #808d93, -3px 2px #cdd2d5, -3px 4px #808d93, -4px 3px #cdd2d5, -4px 5px #808d93, -5px 4px #cdd2d5, -5px 6px #808d93, -6px 5px #cdd2d5, 2px 2px 2px rgba(206,89,55,0);
 }
 .timeline {
     padding: 30px 10px;
@@ -126,7 +129,7 @@ ul {
     font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
-    text-shadow: 0 1px #808d93, -1px 0 #cdd2d5, -1px 2px #808d93, -2px 1px #cdd2d5, -2px 3px #808d93, -3px 2px #cdd2d5, -3px 4px #808d93, -4px 3px #cdd2d5, -4px 5px #808d93, -5px 4px #cdd2d5, -5px 6px #808d93, -6px 5px #cdd2d5, -6px 7px #808d93, -7px 6px #cdd2d5, -7px 8px #808d93, -8px 7px #cdd2d5;
+    text-shadow: -1px 0 #cdd2d5, -1px 2px #808d93, -2px 1px #cdd2d5, -2px 3px #808d93, -3px 2px #cdd2d5, -3px 4px #808d93, -4px 3px #cdd2d5, -4px 5px #808d93, -5px 4px #cdd2d5, -5px 6px #808d93, -6px 5px #cdd2d5, 2px 2px 2px rgba(206,89,55,0);
 }
 .image{
     width: 50%;
